post and note update202011

--- a/docs/_posts/2020-11-03-other.md
+++ b/docs/_posts/2020-11-03-other.md
@@ -1,11 +1,9 @@
 ---
-layout: default
+layout: post
 title: "とりあえず書いてみた"
 tags: Other
 category: Other
 ---
-
-# 2020.11.03
 
 カテゴリとTagが使えるようになったので、一通り環境の設定は完了。
 
