--- a/content/post/2021/06/02.md
+++ b/content/post/2021/06/02.md
@@ -7,7 +7,7 @@ tags:
   -
 description: "Hugoでサイトを作ってみました。"
 toc: false
-thumbnail: 
+thumbnail: "img/thumbnail/thumbnail_siteinfo.png"
 images: []
 ---
 
