--- a/content/post/2021/07/03.md
+++ b/content/post/2021/07/03.md
@@ -7,7 +7,7 @@ tags:
   - css組版
 description: "CSS組版でいつも忘れるあれやこれや"
 toc: false
-thumbnail: 
+thumbnail: "img/thumbnail/thumbnail_cssts.png"
 images: []
 draft: false
 ---
