--- a/content/post/2022/01/05.md
+++ b/content/post/2022/01/05.md
@@ -9,7 +9,7 @@ tags:
   - PowerShell
 description: "WindowsServer2016の役割と機能の一覧を確認する"
 toc: false
-thumbnail: 
+thumbnail: "img/thumbnail/thumbnail_optips.png"
 images: []
 summary: "WindowsServerの構築にあたって役割と機能の一覧を確認したり取得したい。取得したパラメータの再利用性も考慮した方法まとめ。"
 draft: false
