--- a/content/post/2022/01/07.md
+++ b/content/post/2022/01/07.md
@@ -40,3 +40,17 @@ $ git commit
 
 うーん、変更をいれる以上管理下に置きたいけど、その場合は zip で落としてくるしかないということですかね…。
 (そもそも git 管理下で clone してきたものはいじるなという事なのか。)
+
+## 追記:2022.01.14
+
+レイアウトのカスタマイズは直下の`/layouts`フォルダに同名のファイルを置くことでこちらが優先されて適用される。
+コードブロックのフォントで Consolas が使われてマルチバイト文字列で文字幅がずれる問題に対し mainroad の style.css を直接修正していたが、こちらもよく見ると以下のように書かれており、 `config.toml` で `.Site.Params.style.vars.fontFamilySecondary` を指定することで変更できることが分かった。
+
+```shell
+{{- $fontMono := `SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace` -}}
+(中略)
+{{- $fontFamilySecondary := .Site.Params.style.vars.fontFamilySecondary | default $fontMono -}}
+```
+
+結局 theme ファイルをいじる必要なんてなかった…。  
+hugo なんもわからん。
