--- a/content/post/2021/06/02.md
+++ b/content/post/2021/06/02.md
@@ -9,6 +9,7 @@ description: "Hugoでサイトを作ってみました。"
 toc: false
 thumbnail: "img/thumbnail/thumbnail_siteinfo.png"
 images: []
+share: true
 ---
 
 Hugoでサイトを作ってみました。
