--- a/content/post/2021/07/03.md
+++ b/content/post/2021/07/03.md
@@ -9,6 +9,7 @@ description: "CSS組版でいつも忘れるあれやこれや"
 toc: false
 thumbnail: "img/thumbnail/thumbnail_cssts.png"
 images: []
+share: true
 draft: false
 ---
 
