--- a/content/post/2022/01/05.md
+++ b/content/post/2022/01/05.md
@@ -12,6 +12,7 @@ toc: false
 thumbnail: "img/thumbnail/thumbnail_optips.png"
 images: []
 summary: "WindowsServerの構築にあたって役割と機能の一覧を確認したり取得したい。取得したパラメータの再利用性も考慮した方法まとめ。"
+share: true
 draft: false
 ---
 
